# cullis

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  cullis-connector.spec  deploy.sh  deploy_broker.sh  deploy_demo.sh  deploy_proxy.sh  docker-compose.prod.yml  docker-compose.proxy.standalone.yml  docker-compose.proxy.yml  docker-compose.yml  generate_certs.py  proxy.env.example  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.github/: pull_request_template.md
agents/: sdk.py
alembic/: env.py
app/: config.py  e2e_crypto.py  logging_config.py  main.py  spiffe.py  telemetry.py  telemetry_metrics.py
cullis_connector/: README.md  autostart.py  cli.py  desktop_app.py  enrollment.py  ide_config.py  inbox_dispatcher.py  inbox_poller.py  notifier.py  profile.py  state.py  statusline_token.py  web.py
cullis_sdk/: README.md  client.py  spiffe.py  types.py
demo_network/: .gitignore  README.md  compose.postgres.yml  compose.yml  smoke.sh
docs/: index.html  mcp-proxy.md  operations-runbook.md  ops-runbook.md  website_plan.md
enterprise-kit/: BYOCA.md  docker-compose.agent.yml  quickstart.sh
enterprise_sandbox/: README.md  demo.sh  docker-compose.yml  down.sh  smoke.sh  up.sh
imp/: changelog.md  scalability.md  status.md
mcp_proxy/: Dockerfile  alembic.ini  config.py  db.py  db_models.py  main.py  models.py  requirements-proxy.txt  spiffe.py
nginx/: nginx.conf
org-node/: docker-compose.yml
reference/: demo.sh  docker-compose.yml  down.sh  smoke.sh  up.sh
(+465 files in other folders)
